@@ -1,3 +1,10 @@
+2005-02-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/display/gimpdisplayshell-callbacks.c 
+	(gimp_display_shell_canvas_tool_events):  For testing, apply
+	patch switching display-wide grab to app-wide grab while
+	handling button-release event, see bug #162823.
+
 2005-02-09  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/pixelize.c: added a preview.
